2008-06-12  Neil Roberts  <neil@o-hand.com>

	* clutter/win32/clutter-stage-win32.c: Updated to the new layout
	API. All code to do with positioning the stage has been removed so
	the window is left where Windows wants to put it and it can not be
	moved with clutter_actor_set_position.

	* clutter/win32/clutter-stage-win32.h (ClutterStageWin32): Remove
	win_xpos and win_ypos.

	* clutter/win32/clutter-event-win32.c (message_translate): Remove
	the handler for WM_MOVE because the stage no longer cares where it
	is positioned.

2008-06-12  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-actor.[ch]: Documentation fixes.

	* clutter/clutter-backend.c: Documentation fixes.

	* clutter/clutter-container.h: Documentation fixes.

	* clutter/clutter-fixed.c (clutter_qdivx): Fix the return
	value to be after the description.

	* clutter/clutter-texture.[ch]: Documentation fixes.

	* clutter/clutter-timeline.c: Documentation fixes.

2008-06-11  Emmanuele Bassi  <ebassi@openedhand.com>

	* tests/test-layout.c: Take into account the origin of the
	parent, if it has changed, and queue a relayout if we are
	using the transformed box when computing the layout.

2008-06-11  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/eglnative/clutter-stage-egl.c: Remove a duplicate
	get_preferred_width() implementation. (thanks to Iain Holmes)

2008-06-11  Neil Roberts  <neil@o-hand.com>

	* clutter/clutter-actor.c (clutter_actor_allocate): Fixed the
	logic when detecting whether the actor has moved.

2008-06-11  Iain Holmes  <iain@openedhand.com>

	* configure.ac: Detect the GL headers in flavour=fruity

	* clutter/fruity/clutter-stage-fruity.c: Update the Fruity backend to 
	use the new size negotiation API.

2008-06-11  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-label.c (clutter_label_allocate): Keep the
	layout if the size of the allocation is the same as the last
	allocation received by the label.

2008-06-11  Emmanuele Bassi  <ebassi@openedhand.com>
